--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Professor Ajax</h1>
+    <header>
+        <img src="Imagem1.png" width="800">
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="musica.html">Música</a>
+        <a href="aulas.html">Aulas</a>
+        <a href="planos.html">Planos</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+    <main>
+        <figure>
+            <h3>Python</h3>
+            <img src="Python-logo-notext.svg.png" width="250px">
+            <figcaption> O Python é uma linguagem de programação amplamente usada em aplicações da Web, desenvolvimento
+                de software, ciência de dados e machine learning (ML). </figcaption>
+        </figure>
+
+        <figure>
+            <h3>Java</h3>
+            <img src="java.png"width="250px">
+            <figcaption> JavaScript é uma linguagem de programação usada por desenvolvedores para fazer páginas
+                interativas da Internet. </figcaption>
+        </figure>
+
+        <figure>
+            <h3>C#</h3>
+            <img src="csharp-logo.png"width="250px">
+            <figcaption>C# é uma linguagem de programação orientada a objetos e orientada a componentes. C# fornece
+                construções de linguagem para dar suporte diretamente a esses conceitos, tornando C# uma linguagem
+                natural
+                para criação e uso de componentes de software.</figcaption>
+        </figure>
+
+        <figure>
+            <h3>R</h3>
+            <img src="R_logo.svg.png"width="250px">
+            <figcaption>É uma linguagem e ambiente para computação estatística e gráficos.</figcaption>
+        </figure>
+    </main>
+
+    <footer>
+        <strong>Professor Ajax</strong>
+    </footer>
 </body>
+
 </html>
